<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".StokEditFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etstokkode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stok_kode"
                android:enabled="false"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etstoknama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stok_nama"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etstokjum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stok_jum"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etstokhargabeli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stok_hargabeli"
                android:inputType="numberDecimal"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow">
            <EditText
                android:id="@+id/etstokharga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stok_hargajual"
                android:inputType="numberDecimal"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/title_ket">

            <EditText
                android:id="@+id/etKet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_regular"
                android:inputType="text"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_blue"
                android:text="@string/kamera"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/white"
                android:layout_marginEnd="30dp"
                android:id="@+id/btkamera"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:id="@+id/ivkamera"
                android:src="@drawable/noimage"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/simpan"
            android:background="@drawable/button_green"
            android:id="@+id/btnsave" />

    </LinearLayout>

</FrameLayout>