<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans"
    android:id="@+id/rlprofil"
    android:visibility="gone"
    android:padding="30dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_white">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:onClick="closeprofil"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etnama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profil_nama"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etalamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profil_alamat"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/ettelepon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profil_telepon"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etkasir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profil_kasir"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">
                    <EditText
                        android:id="@+id/etuang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profil_uang"

                        android:enabled="false"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_monetization_on_black_24dp"
                    android:layout_weight="1"
                    android:onClick="gouang"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/tvuang"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/simpan"
                android:background="@drawable/button_green"
                android:id="@+id/btnsave"
                android:onClick="saveprofil"/>
        </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>