<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BarcodeAddActivity"
    android:layout_marginTop="80dp"
    tools:showIn="@layout/activity_barcode_add">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:contentPadding="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/etstokkode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/stok_kode"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/etstoknama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nama"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/etstokket"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ket"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="50dp"
                        android:text="@string/simpan"
                        android:background="@drawable/button_green"
                        android:id="@+id/btnsave"
                        android:onClick="savebarcode"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>